--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "description": "HomeKit support for the impatient",
   "version": "0.4.52",
   "scripts": {
-    "dev": "DEBUG=* ./bin/homebridge -D -P example-plugins/ || true"
+    "dev": "DEBUG=* ./bin/homebridge -D -P example-plugins/ || true",
+    "postinstall": "node bin/postinstall"
   },
   "author": {
     "name": "Nick Farina"
@@ -35,8 +36,11 @@
     "chalk": "^1.1.1",
     "commander": "2.8.1",
     "hap-nodejs": "0.4.51",
-    "semver": "5.0.3",
     "node-persist": "^0.0.8",
-    "qrcode-terminal": "^0.11.0"
+    "ora": "^4.0.3",
+    "prompts": "^2.3.1",
+    "qrcode-terminal": "^0.11.0",
+    "semver": "5.0.3",
+    "tcp-port-used": "^1.0.1"
   }
 }
